updated styling and html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div id="clock" aria-live="polite"></div>
             <div>
                 <span id="location">
-                    Your Time
+                    Your Time Zone
                 </span>
             </div>
         </section>
