--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
         </nav>
         <section id="clock-section" aria-label="Clock">
             <div id="clock" aria-live="polite"></div>
-            <div>
+            <div id="date-location-container">
                 <span id="location">
                     Your Time Zone
+                </span>
+                <span id="date">
                 </span>
             </div>
         </section>
