--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div id="clock" aria-live="polite"></div>
             <div id="date-location-container">
                 <span id="location">
-                    Select a time zone from menu
+                    Select a city from menu
                 </span>
                 <span id="date">
                 </span>
