date change fix

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
                 Select a city from the menu
             </span>
             <div id="clock" aria-live="polite"></div>
-            <span id="date">
-            </span>
+            <span id="date"></span>
         </section>
         <script src="script.js"></script>
     </body>
